apps/production/container-registry/base/resources/ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${REGISTRY_NAME}-ui
spec:
  selector:
    app: ${REGISTRY_NAME}-ui
  ports:
    - name: http
      targetPort: 80
      port: 8080
