apps/production/container-registry/base/resources/ui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${REGISTRY_NAME}-ui

spec:
  entryPoints:
    - websecure
  routes:
    - match: ${REGISTRY_UI_INGRESS_MATCH}
      kind: Rule
      services:
        - name: ${REGISTRY_NAME}-ui
          port: http
      middlewares:
        - name: strip-ui-prefix
  tls:
    secretName: local-hejsan-xyz-tls

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ${REGISTRY_NAME}-strip-ui-prefix
spec:
  stripPrefix:
    prefixes:
      - "/ui"
